# re-encoder

./: CMakeLists.txt  INSTALL.md
docker/: Dockerfile  Makefile
src/: decoder.c  decoder.h  encoder.c  encoder.h  frame.c  frame.h  main.c  resampler.c  resampler.h  rescaler.c  rescaler.h
src/common/: basename.c  basename.h  error.c  error.h
